# sqs-triggered-ecs-fast

./: Cargo.toml  Dockerfile  crates.nix  flake.nix  pyo3configtest
src/: main.rs
